# smbclient-ng

./: Makefile  README.md  SECURITY.md  e.py  pyproject.toml  requirements.txt  setup.py  smbclient-ng.py
.github/workflows/: lint.yml  python-pip-build.yml  python-poetry-build.yml
documentation/: index.html  search.js  smbclientng.html
documentation/smbclientng/: core.html  modules.html
documentation/smbclientng/core/: CommandCompleter.html  Config.html  Credentials.html  InteractiveShell.html  LocalFileIO.html  Logger.html  Module.html  SMBSession.html  (+3 more)
smbclient_ng/: __init__.py  __main__.py
smbclient_ng/core/: InteractiveShell.py  SMBSession.py  utils.py
smbclient_ng/tests/: a.py
smbclientng/: __init__.py  __main__.py  console.py
smbclientng/commands/: __init__.py  acls.py  bat.py  bhead.py  btail.py  cat.py  cd.py  close.py  connect.py  debug.py  dir.py  exit.py  find.py  get.py  head.py  help.py  history.py  info.py  lbat.py  lcat.py  lcd.py  lcp.py  lls.py  lmkdir.py  lpwd.py  lrename.py  lrm.py  lrmdir.py  ls.py  ltree.py  metadata.py  mkdir.py  module.py  mount.py  put.py  quit.py  reconnect.py  reset.py  rm.py  rmdir.py  (+7 more)
smbclientng/core/: Command.py  CommandArgumentParser.py  CommandCompleter.py  Config.py  Credentials.py  InteractiveShell.py  LocalFileIO.py  Logger.py  Module.py  ModuleArgumentParser.py  SIDResolver.py  SMBSession.py  SessionsManager.py  __init__.py  utils.py
smbclientng/modules/: Extract.py  Find.py  GPPPasswords.py  GppPasswords.py  Grep.py  Users.py  __init__.py  gpppasswords.py
smbclientng/tests/: __init__.py  common.py  run-tests.py  test_SMBSession.py  test_SMBSession_path_isdir.py  test_SMBSession_path_isfile.py
smbclientng/types/: Command.py  CommandArgumentParser.py  Config.py  Credentials.py  Module.py  ModuleArgumentParser.py
smbclientng/utils/: __init__.py  decorator.py  paths.py  utils.py
testing/: main.py  run.sh
testing/core/: Check.py  Logger.py  utils.py
testing/tests/: setup.ps1
(+142 files in other folders)
