[project]
name = "smbclientng"
version = "2.1.7"
description = "smbclient-ng, a fast and user-friendly way to interact with SMB shares."
readme = "README.md"
requires-python = ">=3.7,<3.14"
license = { text = "MIT" }
authors = [
    { name = "p0dalirius" }
]

dependencies = [
    "impacket>=0.10.0",
    "rich>=13.0.0",
    "charset-normalizer>=3.3.2",
    "pefile==2023.2.7"
]

[project.scripts]
smbclientng = "smbclientng.console:run"
smbng = "smbclientng.console:run"

[project.optional-dependencies]
dev = ["flake8"]

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
