[tool.poetry]
name = "smbclientng"
version = "3.0.0"
description = "smbclient-ng, a fast and user-friendly way to interact with SMB shares."
readme = "README.md"
authors = ["p0dalirius"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.14"
impacket = "0.10.0"
rich = "13.0.0"
charset-normalizer = "3.3.2"
pefile = "2023.2.7"

[tool.poetry.scripts]
smbclientng = "smbclientng.console:run"
smbng = "smbclientng.console:run"

[tool.poetry.extras]
dev = ["flake8"]

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
