[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "smbclientng"
version = "3.0.0"
description = "smbclient-ng, a fast and user-friendly way to interact with SMB shares."
authors = [
    {name = "p0dalirius"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "impacket>=0.10.0",
    "rich>=13.0.0",
    "charset-normalizer>=3.3.2",
    "pefile>=2023.2.7"
]

[project.urls]
repository  = "https://github.com/p0dalirius/smbclient-ng"

[project.scripts]
smbclientng = "smbclientng.console:run"
smbng = "smbclientng.console:run"

